[project]
name = "tool-card-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.0",
    "python-dateutil>=2.9.0",
    "yfinance>=0.2",
]

[project.scripts]
tool-card-securities = "securities:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["securities"]
